Updated `cardarea.toml` to use multiline string on the payload

--- a/lovely/cardarea.toml
+++ b/lovely/cardarea.toml
@@ -8,7 +8,10 @@ priority = 1
 target = "cardarea.lua"
 pattern = "function CardArea:can_highlight(card)"
 position = "after"
-payload = "    -- Disable the action button if the setting is off\n    if not G.SETTINGS.enable_action_buttons and self.config.type ~= 'hand' then return false end"
+payload = '''
+    -- Disable the action button if the setting is off
+    if not G.SETTINGS.enable_action_buttons and self.config.type ~= 'hand' then return false end
+'''
 match_indent = false
 times = 1
 
@@ -17,7 +20,12 @@ times = 1
 target = "cardarea.lua"
 pattern = "(?<before>function CardArea:remove_from_highlighted[\\s\\S]+)(?:    card:highlight\\(false\\))"
 position = "at"
-payload = "$before\n    if card then\n        card:highlight(false)\n    end\n"
+payload = '''$before
+    if card then
+        card:highlight(false)
+    end
+
+'''
 times = 1
 
 [[patches]]
@@ -25,7 +33,12 @@ times = 1
 target = "cardarea.lua"
 pattern = "(?<before>function CardArea:set_ranks[\\s\\S]+\\n)(?<toReplace> +card.states.drag.can = false)"
 position = "at"
-payload = "$before            -- This enable dragging on all platforms\n            if --[[ G.CONTROLLER.HID.touch and ]] ((self.config.type == 'shop') or (self.config.type == 'consumeable')) then\n                card.states.drag.can = true\n            else\n    $toReplace\n            end"
+payload = '''$before            -- This enable dragging on all platforms
+            if --[[ G.CONTROLLER.HID.touch and ]] ((self.config.type == 'shop') or (self.config.type == 'consumeable')) then
+                card.states.drag.can = true
+            else
+    $toReplace
+            end'''
 times = 1
 
 [[patches]]
@@ -33,7 +46,9 @@ times = 1
 target = "cardarea.lua"
 pattern = "if G.deck_preview or self.states.collide.is or (G.buttons and G.buttons.states.collide.is and G.CONTROLLER.HID.controller) then self.children.view_deck:draw() end"
 position = "at"
-payload = "if G.deck_preview or (not self.under_overlay and self.states.collide.is) or (G.buttons and (not G.buttons.under_overlay and G.buttons.states.collide.is) and G.CONTROLLER.HID.controller) then self.children.view_deck:draw() end"
+payload = '''
+if G.deck_preview or (not self.under_overlay and self.states.collide.is) or (G.buttons and (not G.buttons.under_overlay and G.buttons.states.collide.is) and G.CONTROLLER.HID.controller) then self.children.view_deck:draw() end
+'''
 match_indent = true
 times = 1
 
@@ -42,5 +57,7 @@ times = 1
 target = "cardarea.lua"
 pattern = "card.T.r = 0.1"
 position = "at"
-payload = "card.T.r = (self.config.flat and 0 or 0.1)"
+payload = '''
+card.T.r = (self.config.flat and 0 or 0.1)
+'''
 times = 1
