--- a/lovely/node.toml
+++ b/lovely/node.toml
@@ -8,5 +8,15 @@ priority = 1
 target = "engine/node.lua"
 pattern = "function Node:update(dt) end"
 position = "after"
-payload = "\n--Determine touch behaviour\nfunction Node:simple_touch()\n    return true\nend\n\nfunction Node:can_long_press() return nil end\nfunction Node:can_hover_on_drag() return true end\n\n"
+payload = '''
+
+--Determine touch behaviour
+function Node:simple_touch()
+    return true
+end
+
+function Node:can_long_press() return nil end
+function Node:can_hover_on_drag() return true end
+
+'''
 match_indent = false
